api-generatorでAPIリクエストコードを自動生成して、呼び出すところまで実装
