# server/docs/swagger.json
@@ -5,7 +5,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "basePath": "http://localhost:8080",
+    "basePath": "/localhost:8080",
     "paths": {
         "/api/v1/book": {
             "post": {
@@ -74,10 +74,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/definitions/model.Book"
-                                }
+                                "$ref": "#/definitions/model.Book"
                             }
                         }
                     }
